<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_movieRow_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_movieRow_ID"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_movieRow_showID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_movieRow_showID"
        app:layout_constraintStart_toEndOf="@+id/txt_movieRow_ID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_movieRow_movieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_movieRow_movieName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_movieRow_ID" />

    <TextView
        android:id="@+id/txt_movieRow_showName"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_movieRow_showName"
        app:layout_constraintStart_toEndOf="@+id/txt_movieRow_movieName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_movieRow_showDescription"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Description"
        android:text="@string/txt_movieRow_showDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_movieRow_showName" />

    <TextView
        android:id="@+id/txt_movieRow_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_movieRow_rating"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_movieRow_showDescription" />

    <RatingBar
        android:id="@+id/ratingBar_movieRow_showRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:scaleX=".5"
        android:scaleY=".5"
        app:layout_constraintStart_toEndOf="@+id/txt_movieRow_rating"
        app:layout_constraintTop_toBottomOf="@+id/txt_movieRow_showDescription" />

    <ImageButton
        android:id="@+id/imageButton_movieRow_ShowBtnDelete"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="TODO"
        app:layout_constraintStart_toEndOf="@+id/ratingBar_movieRow_showRating"
        app:layout_constraintTop_toBottomOf="@+id/txt_movieRow_showDescription"
        app:srcCompat="@drawable/ic_delete_red_24dp" />

</android.support.constraint.ConstraintLayout>