<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerMovie"
        android:layout_width="match_parent"
        android:layout_height="617dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contextClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerMovie"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_mainActivity_addRecord"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/tbBtn_mainActivity_ShowHide_deletedItems"
            android:text="@string/btn_mainActivity_addRecord" />

        <ToggleButton
            android:id="@+id/tbBtn_mainActivity_ShowHide_deletedItems"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tbBtn_mainAvtivity_ShowHide_deletedItems"
            android:textOff="@string/show_deleted_items"
            android:textOn="@string/hide_deleted_items" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>